# TraceRazor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TraceRazor_Enhancements.docx  TraceRazor_PRD.docx  TraceRazor_v2_PRD.docx  docker-compose.yml  publish.ps1
.github/actions/tracerazor/: action.yml
.github/workflows/: agent-efficiency-gate.yml  tracerazor.yml
benchmarks/: README.md  RESULTS.md  run_benchmarks.py
benchmarks/traces/: bloated-agent.json  clean-agent.json  looping-agent.json  reformulator-agent.json  verbose-agent.json
crates/tracerazor-cli/: Cargo.toml
crates/tracerazor-cli/src/: main.rs
crates/tracerazor-core/: Cargo.toml
crates/tracerazor-core/src/: cost.rs  fixes.rs  graph.rs  iar.rs  lib.rs  report.rs  scoring.rs  simulate.rs  types.rs
crates/tracerazor-core/src/metrics/: cce.rs  ccr.rs  csd.rs  dbo.rs  gar.rs  isr.rs  ldi.rs  mod.rs  rda.rs  reformulation.rs  shl.rs  srr.rs  tca.rs  tur.rs  vdi.rs  verbosity_data.rs
crates/tracerazor-ingest/: Cargo.toml
crates/tracerazor-ingest/src/: langsmith.rs  lib.rs  otel.rs  raw_json.rs
crates/tracerazor-proxy/: Cargo.toml
crates/tracerazor-proxy/src/: budget.rs  guardrail.rs  lib.rs  scope.rs  verbosity.rs
crates/tracerazor-semantic/: Cargo.toml
crates/tracerazor-semantic/src/: bow.rs  lib.rs  llm.rs  openai.rs
crates/tracerazor-server/: Cargo.toml
crates/tracerazor-server/src/: api.rs  dashboard.html  main.rs  state.rs  ws.rs
crates/tracerazor-store/: Cargo.toml
crates/tracerazor-store/src/: kb.rs  lib.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  api.js
docs/: tau_bench_benchmark_report.md
integrations/anthropic-wrapper/: README.md  pyproject.toml
integrations/anthropic-wrapper/tracerazor_anthropic/: __init__.py  client.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/examples/: support_crew.py
integrations/crewai/tracerazor_crewai/: __init__.py  callback.py  client.py
integrations/langgraph/: README.md  pyproject.toml  setup.py
integrations/langgraph/examples/: customer_support.py
integrations/langgraph/tracerazor_langgraph/: __init__.py  callback.py  client.py  trace_builder.py
integrations/openai-agents/: README.md  pyproject.toml
integrations/openai-agents/examples/: support_agent.py
integrations/openai-agents/tracerazor_openai_agents/: __init__.py  client.py  hooks.py
integrations/openai-wrapper/: README.md  pyproject.toml
integrations/openai-wrapper/tracerazor_openai/: __init__.py  client.py
integrations/tracerazor/: README.md  pyproject.toml
integrations/tracerazor/examples/: MULTI_AGENT_GUIDE.md  http_mode.py  multi_agent_workflow.py  openai_agents.py
integrations/tracerazor/tracerazor_sdk/: __init__.py  client.py  trace.py  tracer.py
traces/: latest-run.json
v2/: README.md  demo_offline.py  pyproject.toml
v2/benchmark/: baselines.py  sweep.py  tau2_evaluator.py  tau2_loader.py  tau2_runner.py  tau_bench_runner.py
v2/results/: tau_bench_adaptive_k5_50t.json  tau_bench_all50.json  tau_bench_naive_k5_50t.json  tau_bench_sc_k5_50t.json
v2/tests/: conftest.py  test_adaptive_k.py  test_baselines.py  test_canonicalize.py  test_consensus.py  test_evaluator.py  test_mutation.py  test_naive_ensemble.py  test_self_consistency.py  test_tau2_loader.py
v2/tracerazor/: __init__.py  _adapters.py  _adaptive_k.py  _audit_client.py  _audit_trace.py  _audit_tracer.py  _canonicalize.py  _consensus.py  _mutation.py  _naive_ensemble.py  _report.py  _self_consistency.py
