[workspace]
members = [
    "crates/tracerazor-core",
    "crates/tracerazor-ingest",
    "crates/tracerazor-semantic",
    "crates/tracerazor-store",
    "crates/tracerazor-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
petgraph = { version = "0.6", features = ["serde-1"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
