[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracerazor-v2"
version = "2.0.0"
description = "Adaptive-K speculative ensembles for agent reliability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev       = ["pytest>=8", "pytest-asyncio>=0.23", "anyio[trio]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]
