[package]
name = "tracerazor-proxy"
version = "0.1.0"
edition = "2021"
description = "TraceRazor LLM proxy — guardrail system, context compression, budget injection"
license = "Apache-2.0"

[dependencies]
tracerazor-core = { path = "../tracerazor-core" }
tracerazor-semantic = { path = "../tracerazor-semantic" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true }
