[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor-anthropic"
version = "0.2.0"
description = "Drop-in TraceRazor-instrumented Anthropic client. Zero-friction token efficiency auditing."
authors = [{ name = "Zulfaqar Hafez" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["ai", "llm", "anthropic", "claude", "token-efficiency", "tracing", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tracerazor-sdk>=0.1.0",
    "anthropic>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_anthropic*"]