[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor-crewai"
version = "0.2.0"
description = "TraceRazor callback adapter for CrewAI — automatic token efficiency auditing"
authors = [{ name = "Zulfaqar Hafez" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["ai", "agents", "crewai", "token-efficiency", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tracerazor>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"

[project.optional-dependencies]
crewai = ["crewai>=0.28"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_crewai*"]
