[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tracerazor-langgraph"
version = "0.1.0"
description = "TraceRazor LangGraph/LangChain callback — token efficiency auditing"
authors = [{ name = "Zulfaqar Hafez" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_langgraph*"]
