[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor-langgraph"
version = "0.1.0"
description = "TraceRazor LangGraph/LangChain callback — token efficiency auditing"
authors = [{ name = "Zulfaqar Hafez" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agents", "langgraph", "langchain", "token-efficiency", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2",
]

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_langgraph*"]
