[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor-openai-agents"
version = "0.2.0"
description = "TraceRazor hooks adapter for the OpenAI Agents SDK"
authors = [{ name = "Zulfaqar Hafez" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["ai", "agents", "openai", "token-efficiency", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tracerazor>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"

[project.optional-dependencies]
agents = ["openai-agents>=0.0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_openai_agents*"]
