[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor-openai"
version = "0.2.0"
description = "Drop-in TraceRazor-instrumented OpenAI client. Zero-friction token efficiency auditing."
authors = [{ name = "Zulfaqar Hafez" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["ai", "llm", "openai", "token-efficiency", "tracing", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tracerazor-sdk>=0.1.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_openai*"]