[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tracerazor"
version = "0.1.0"
description = "TraceRazor Python SDK — token efficiency auditing for AI agents"
authors = [{ name = "Zulfaqar Hafez" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.28"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_sdk*"]
