[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerazor"
version = "0.2.0"
description = "TraceRazor Python SDK — comprehensive token efficiency auditing & optimization for AI agents"
authors = [{ name = "Zulfaqar Hafez" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "token-efficiency", "observability", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ZulfaqarHafez/tracerazor"
Repository = "https://github.com/ZulfaqarHafez/tracerazor"
Issues = "https://github.com/ZulfaqarHafez/tracerazor/issues"

[project.optional-dependencies]
http = ["requests>=2.28"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracerazor_sdk*"]
